openshift/simplebrass.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mybrass
  labels:
    app: mybrass
spec:
  containers:
    - name: mybrass
      image: quay.io/reselbob/instrumentresellerseeder:v.09
      ports:
        - containerPort: 8088
  restartPolicy: Always
  ---
  apiVersion: v1
  kind: Secret
  metadata:
    name: mongo-url
    namespace: sidneyssaxes
  type: Opaque
  stringData:
    url: <mongo-url-here> #put the real URL here
