openshift/saxophone.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: sidneyssaxes
  labels:
    name: sidneyssaxes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidneyssaxes
  namespace: sidneyssaxes
  labels:
    app: sidneyssaxes
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sidneyssaxes
  template:
    metadata:
      labels:
        app: sidneyssaxes
    spec:
      containers:
        - name: sidneyssaxophone
          image: quay.io/reselbob/instrumentreseller:v.09
          ports:
            - containerPort: 8088
---
apiVersion: v1
kind: Service
metadata:
  name: sidneyssaxes
  namespace: sidneyssaxes
spec:
  selector:
    app: sidneyssaxes
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8088
  type: LoadBalancer
